# ChickenWire

./: .gitignore  CMakeLists.txt  ChickenWire.qml  Main.qml  MidiAudio.cpp  MidiAudio.h  MidiAudioProcess.cpp  MidiAudioProcess.h  MidiAudioWin.cpp  MidiAudioWin.h  MidiFile.cpp  MidiFile.h  MidiPlayer.cpp  MidiPlayer.h  README.md  ShortcutOverlay.qml  Theme.qml  Tonnetz.qml  TonnetzController.cpp  TonnetzController.h  TransportWidget.cpp  TransportWidget.h  VisualizerSwitcher.h  chickenWire.qml  chord_combinations.csv  chordsymbol.cpp  chordsymbol.h  coloreffect.frag  cubeDance.qml  enumerate_chords.py  installer.iss  invert.frag  main.cpp  main.qml  midiAudio.cpp  midiAudio.h  midiAudioProcess.cpp  midiAudioProcess.h  midiFile.cpp  midiPlayer.cpp  (+11 more)
.github/workflows/: windows.yml
chordsymbol/: CMakeLists.txt  chordsymbol.h
misc/: enumNotes  enumNotes.cpp  usage.txt
